[gd_scene load_steps=3 format=3 uid="uid://dujt3vaorq8gl"]

[ext_resource type="Script" path="res://world/layer_switches/layer_switch_inverted.gd" id="1_aqmjl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jopfb"]
size = Vector2(48, 100)

[node name="InvertedLayerSwitch" type="Area2D"]
z_index = 3
collision_layer = 0
collision_mask = 8
script = ExtResource("1_aqmjl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jopfb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
